--- a/src/main.css
+++ b/src/main.css
@@ -1,10 +1,11 @@
 body {
-    min-height: 100vh;
-    background-color: aquamarine;
+	min-height: 100vh;
+	background-color: aquamarine;
+	margin: 0;
 }
 
 .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
